- fix formatting of equation 2.1 - try larger chapter spacing

--- a/css/index.css
+++ b/css/index.css
@@ -89,3 +89,8 @@ body {
 h4 {
   margin-top: 30px;
 }
+.chapter {
+  padding-bottom: 20px;
+  margin-bottom: 100px;
+  border-bottom: 1px solid #bbb;
+}
